gitlab_github_theme.css
@-moz-document domain(gitlab.arch), domain(gitlab.com) {
    /* colors from github */

    /* issue list */

    .well-list li:hover {
        background-color: #f7f7f7;
        border-bottom: 1px solid rgba(0, 0, 0, 0.05);
    }

    .well-list li.closed:hover {
        background-color: #f0f0f0;
        border-bottom: 1px solid rgba(0, 0, 0, 0.05);
    }

    /* issues right column */

    .issue .row > .col-md-3, .merge-request .row > .col-md-3 {
        position: fixed;
        top: 170px;
        left: 80%;
        padding-left: 0px;
        width: 20% !important;
    }

    .issuable-affix.affix {
        position: static;
        top: inherit;
        width: 100%;
    }

    .participants {
        position: fixed;
        top: 570px;
        left: 80%;
    }

    /* open/close */

    .issue-box {
        border-radius: 3px;
        padding: 4px 8px;
        font-weight: bold;
        font-size: 14px;
        line-height: 20px;
    }

    .issue-box:before {font-family: FontAwesome;}
    .issue-box.issue-box-open:before {content: "\f06a";}
    .issue-box.issue-box-closed:before {content: "\f058";}
    .issue-box.issue-box-open {background-color: #6cc644;}
    .issue-box.issue-box-closed {background-color: #bd2c00;}

    /* issue first post */

    .issue-details, .merge-request, .merge-request-details {
        display: flex;
        flex-direction: column;
    }

    .issue-details > hr, .merge-request-details > hr {
        display: none;
    }

    .issue-details > .issue-title, .merge-request-details > .issue-title {order: 1;}
    .issue-details > .page-title, .merge-request-details > .page-title {order: 2;}
    .merge-request-details > .append-bottom-20 {order: 3;}
    .merge-request-details > .mr-state-widget {order: 4;}
    .issue-details > .issue-title + div, .merge-request-details > .issue-title + div {order: 5;}

    .merge-request > .merge-request-tabs {order: 1;}
    .merge-request > .merge-request-details {order: 2;}
    .merge-request > .merge-request-details ~ div {order: 3;}

    .merge-request > .merge-request-tabs, .merge-request-details > .mr-state-widget {
        margin-right: calc(25% + 8px);
    }

    .issue-details > .issue-title + div, .merge-request-details > .issue-title + div {
        margin-bottom: 15px;
        margin-left: 70px;
        margin-right: calc(25% + 8px);
        padding: 51px 15px 10px 15px;
        border-radius: 3px;
        border: 1px solid #ddd;
        background: linear-gradient(#f7f7f7, #f7f7f7 36px, #fff 36px, #fff);
    }

    .page-title {
        height: 45px;
    }

    .page-title .pull-right {
        margin-top: -45px;
    }

    .page-title .creator {
        position: relative;
        display: block;
        left: 31px;
        font-size: 0px;
    }

    .issue .page-title .creator {
        top: 23px;
    }

    .merge-request .page-title .creator {
        top: 140px;
    }

    .page-title .creator .avatar {
        position: relative;
        width: 42px !important;
        height: 42px !important;
        left: -26px;
        top: 4px;
    }

    .page-title .creator .author_link {
        color: #333;
        font-weight: bold;
        font-size: 14px;
    }

    .page-title .creator .author_link:hover {
        color: #446e9b;
        text-decoration: none;
    }

    .page-title .note_created_ago {font-size: 13px;}
    .page-title .note_created_ago:before {content: "\00a0·\00a0";}

    .page-title small {font-size: 11px;}
    .page-title small:before {content: "\00a0";}

    /* issue comments timeline */

    .timeline:before {
        margin-top: -15px;
        margin-left: 90px;
        width: 2px;
    }

    .timeline .timeline-entry {
        margin-top: 0px;
    }

    .timeline .timeline-entry .timeline-entry-inner .timeline-content:before, .issue-details > .issue-title + div:before, .merge-request-details > .issue-title + div:before {
        content: "";
        position: absolute;
        width: 12px;
        height: 12px;
        background-color: #f7f7f7;
        border-style: solid;
        border-width: 0px 0px 1px 1px;
        border-color: #ddd;
        transform: rotate(45deg)
    }

    .issue-details > .issue-title + div:before, .merge-request-details > .issue-title + div:before {
        margin-top: -38px;
        margin-left: -22px;
    }

    .timeline .timeline-entry .timeline-entry-inner .timeline-content:before {
        margin-top: 14px;
        margin-left: -6px;
    }

    .timeline .timeline-entry .timeline-entry-inner .timeline-content:after {
        display: none;
    }

    .timeline .timeline-entry .timeline-entry-inner .timeline-icon, .avatar {
        margin-top: 0px;
        border-radius: 3px;
        box-shadow: none;
    }

    .timeline .system-note .timeline-entry-inner .timeline-content:before {
        border: 0px none;
    }

    .timeline .system-note .timeline-entry-inner .timeline-icon {
        margin-left: 72px;
        width: 25px;
        height: 35px;
    }

    .main-notes-list {
        border-bottom: 2px solid #f3f3f3;
        margin-bottom: 10px;
    }

    /* issue comments */

    .timeline .timeline-entry .timeline-entry-inner .timeline-content {
        padding: 0px 0px;
    }

    ul.notes .note:not(.system-note) .note-header, ul.notes .note:not(.system-note) .note-body {
        border: 1px solid #ddd;
    }

    ul.notes .note:not(.system-note) .note-header {
        padding: 8px 10px;
        background-color: #f7f7f7;
        border-top-left-radius: 3px;
        border-top-right-radius: 3px;
        border-bottom: none;
    }

    ul.notes .note:not(.system-note) .note-body {
        padding: 15px 15px 10px;
        background-color: white;
        border-bottom-left-radius: 3px;
        border-bottom-right-radius: 3px;
        border-top: none;
    }

    .note .note-actions {
        display: inline;
        margin-top: -3px;
    }

    .note .note-actions a {
        font-size: 0px;
    }

    .note .note-actions i {
        color: #bbb;
    }

    .system-note {
       margin-top: 0px !important;
       margin-bottom: 0px !important;
    }

    .system-note .note-actions {
        display: none !important;
    }

    /* edit boxes */

    .issue-form-holder label.control-label {
        width: 120px;
    }

    .new_note {
        margin-top: 15px;
        margin-left: 70px;
    }

    .note_text {
        max-height: 500px;
    }

    /* markdown */

    .wiki code, .note-text code {
        font-size: 14px !important;
        color: #333;
        background-color: rgba(0, 0, 0, 0.04);
        border-radius: 3px;
    }

    .highlight {
        padding: 16px;
        background-color: #f7f7f7;
        border-radius: 3px;
    }

    .highlighted-data pre, .highlighted-data pre code {
        background-color: inherit !important;
    }

    .wiki .task-list-item {
        margin-left: -1em;
    }

    .wiki .task-list-item input[type="checkbox"] {
        margin-bottom: 2.5px;
        vertical-align: middle;
    }

    .wiki ul, .note-text ul  {
        margin: 0px 0px 9px 0px !important;
        padding-left: 2em;
    }

    .wiki ul ul, .note-text ul ul {
        margin-bottom: 0px;
    }

    .wiki ul, .note-text ul {
        list-style: disc;
    }

    .wiki ul ul, .note-text ul ul {
        list-style: circle;
    }

    .wiki ul ul ul, .note-text ul ul ul {
        list-style: square;
    }
}

